fix: NullPointerException when sending blank basic authentications (#1624)
When sending blank passwords or usernames inside the basic
authentication objects, the "isBlank" calls triggered a
NullPointerException.

RHCLOUD-22065